--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HTML5 Boilerplate</title>
 </head>
 <body>
-    <h1>Hello world, hello QuickRef.ME!</h1>
+    <h1>Hello world, hello job gg</h1>
 </body>
 </html>
-/*Getting started*/
+<!--Getting started-->
